2001-05-11  Tomas O Connor  <tomas.oconnor@ireland.sun.com>

	* gconf/gconf-internals.h, gconf/gconf-value.h: move
	gconf_value_new_from_string to make it a public API

2001-05-11  Havoc Pennington  <hp@redhat.com>

       Merge from stable.

	* gconf/gconfd.c (signal_handler): on SIGUSR1, enable/disable
	debug spew.

	* gconf/gconf-internals.c (gconf_log): use a runtime variable to
	decide whether to log debug messages

	* gconf/gconf-database.c, gconf/gconfd.c, gconf/gconf-internals.c:
	Change some GCL_WARNING to GCL_DEBUG to chill out logging of
	fairly normal events

2001-05-09  Havoc Pennington  <hp@redhat.com>

	* gconf/Makefile.am: remove testgconfclient from build, should 
	now be made nongraphical and stuck in tests/

	* Makefile.am (SUBDIRS): remove "wrappers" from subdirs

	* configure.in: remove Guile cruft, fix up pkg-config usage

	* acinclude.m4: Use the pkg-config macros, remove gnome-common
	dependency. Requires CVS pkg-config, need a pkg-config release.
        (Since OAF doesn't build against ORBit1 anyway, I figured why not
	check this in too...)
	
2001-04-28  Murray Cumming  <murrayc@usa.net>

	* gconf/gconf-client.c, gconf/gconf-client.h,
          gconf/gconf-schema.c, gconf/gconf-schema.h,
          gconf/gconf-value.c, gconf/gconf-value.h,
          gconf/gconf.c, gconf/gconf.h: Use of const with function
          args. e.g. gconf_value_copy(const GConfValue* src).

2001-04-17  Michael Meeks  <michael@ximian.com>

	* gconf/Makefile.am (dist-hook): don't distribute built
	sources.

Wed Apr 11 08:07:11 2001  George Lebl <jirka@5z.com>

	* gconf/gconf.c (gconf_engine_unref): If unreffing the default engine
	  set the default_engine pointer to NULL

2001-04-02  Federico Mena Quintero  <federico@ximian.com>

	* acinclude.m4: "sourceforge.net", not "sourceforce.net".

2001-03-24  Anders Carlsson   <andersca@gnu.org>

	* configure.in (REBUILD): Add gconf-2.0.pc to AC_OUTPUT files.

2001-03-23  Marius Andreiana  <mandreiana@yahoo.com>
