@@ -7,3 +7,4 @@
 #undef ENABLE_NLS
 #undef HAVE_PTHREAD_H
 #undef GETTEXT_PACKAGE
+#undef HAVE_DB3_DB_H
